--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css?family=Itim');
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -33,6 +35,12 @@
   }
 }
 
+.Header h1 { 
+  font-family: "Itim";
+  font-size: 100px;
+  font-weight: bold;
+}
+
 .card {
   padding: 2em;
 }
@@ -44,14 +52,28 @@
 .card {
   border-style: solid;
   border-color: white;
+  height: 200px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0px 25px 0px;
+  box-shadow: 10px;
+  font-family: "Itim";
+  font-size: 30px;
+  box-shadow: 10px 5px 5px #0000004d;
 }
 
 .front {
   border-style: solid;
-  border-color: red;
+  background-color: #2E4F4F;
 }
 
 .back {
   border-style: solid;
-  border-color: green;
+  background-color: #0E8388;
+}
+
+button {
+  margin: 0px 10px;
 }
